app/assets/stylesheets/_layout.scss
.site-header {
  position: fixed;
  width: 100%;
  background-color: #4A9CDF;
  text-align: center;
  margin-bottom: 1rem;
  overflow: hidden;
  z-index: 1;
}

.logo {
  margin: 0;
  position: relative;
  float: left;
  left: 15px;
  text-align: left;
  line-height: 50px;
  font-size: 1.5rem;
}

#site-nav {
  margin: 0;
  position: relative;
  top: 15px;
  right: 15px;
  float: right;
  text-align: right;
}

 a {
  text-decoration: none;
  color: white;
}

